--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "Unlicense",
   "bugs": {
-    "url": https://github.com/WPWale/wp-hindi-translation-style-guide/issues"
+    "url": "https://github.com/WPWale/wp-hindi-translation-style-guide/issues"
   },
   "homepage": "https://github.com/WPWale/wp-hindi-translation-style-guide#readme"
 }
