--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/WPWale/wp-hindi-translation-style-guide#readme",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-markdown-toc": "^1.1.0"
   }
 }
