--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-markdown-pdf": "^6.0.0",
     "gulp-markdown-toc": "^1.1.0"
   }
 }
